# cratekeeper-cli

./: .gitignore  README.md  docker-compose.yml
.github/skills/prepare-event/: SKILL.md
cratekeeper-cli/: .cache  Dockerfile  pyproject.toml
cratekeeper-cli/cratekeeper/: classifier.py  cli.py  event_builder.py  genre_buckets.py  library_builder.py  local_scanner.py  matcher.py  models.py  mood_analyzer.py  mood_config.py  musicbrainz_client.py  spotify_client.py  tag_writer.py  tidal_client.py
