[project]
name = "cratekeeper"
version = "1.0.0"
description = "DJ library management CLI — classify, analyze, tag, and organize your music crates"
requires-python = ">=3.11"
dependencies = [
    "spotipy>=2.24.0",
    "tidalapi>=0.8.1",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "mutagen>=1.47.0",
    "thefuzz[speedup]>=0.22.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
audio = [
    "essentia-tensorflow>=2.1b6.dev1110; platform_system != 'Windows'",
]

[project.scripts]
crate = "cratekeeper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cratekeeper"]
